# chronos

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  mcp-config.dev.json  mcp-config.release.json
chronos-sandbox/: Cargo.toml  build.rs
chronos-sandbox/programs/: README.md
chronos-sandbox/programs/c/: README.md  test_abort.c  test_add.c  test_busyloop.c  test_clone.c  test_crash_thread.c  test_divide_by_zero.c  test_exit_immediate.c  test_fork.c  test_infinite_loop.c  test_many_threads.c  test_segfault.c  test_threads.c
chronos-sandbox/programs/go/: goroutine_chain.go  goroutine_race.go
chronos-sandbox/programs/java/: ThreadedSum.java
chronos-sandbox/programs/js/: async_chain.js
chronos-sandbox/programs/python/: exception_chain.py  nested_calls.py
chronos-sandbox/programs/rust/: compute_hotspot.rs  data_race.rs
chronos-sandbox/src/: lib.rs
chronos-sandbox/src/client/: error.rs  mod.rs  process.rs  rpc.rs  tools.rs  types.rs
chronos-sandbox/src/programs/: c.rs  mod.rs  rust.rs
chronos-sandbox/tests/: analytics_tools.rs  boundary_conditions.rs  concurrency_stress.rs  connectivity.rs  data_rich.rs  diff_tools.rs  e2e_connectivity.rs  error_handling.rs  event_tools.rs  execution_depth.rs  forensic_tools.rs  hotspot_tools.rs  memory_depth.rs  memory_tools.rs  multi_session.rs  probe_inject.rs  probe_lifecycle.rs  probe_lifecycle_edge_cases.rs  program_scenarios.rs  query_edge_cases.rs  query_filters.rs  query_tools.rs  race_depth.rs  session_compare.rs  session_edge_cases.rs  session_lifecycle.rs  session_persistence.rs  session_persistence_extended.rs  session_snapshot.rs  state_depth.rs  thread_tracking.rs  tripwire.rs  tripwire_depth.rs  tripwire_tools.rs  variable_tools.rs
crates/chronos-browser/: Cargo.toml
crates/chronos-browser/src/: adapter.rs  browser.rs  cdp_client.rs  error.rs  event_mapper.rs  lib.rs  wasm_detector.rs  wasm_probes.rs  wasm_resolver.rs
crates/chronos-browser/tests/: test_adapter.rs  test_e2e.rs  test_event_mapper.rs  test_wasm_resolver.rs
crates/chronos-browser/tests/fixtures/: mod.rs
crates/chronos-browser/tests/fixtures/wasm/: add.wat  index.html  mod.rs
crates/chronos-domain/: Cargo.toml
crates/chronos-domain/src/: adapter.rs  bus.rs  error.rs  lib.rs  semantic.rs  tripwire.rs
crates/chronos-domain/src/index/: causality.rs  compression.rs  mod.rs  performance.rs  shadow.rs  temporal.rs
crates/chronos-domain/src/query/: mod.rs
crates/chronos-domain/src/trace/: event.rs  inspect.rs  location.rs  mod.rs  session.rs
crates/chronos-domain/src/tripwire/: webhook.rs
crates/chronos-domain/src/value/: mod.rs  typed.rs
crates/chronos-e2e/: Cargo.toml
crates/chronos-e2e/tests/: e2e.rs  test_ptrace_capture.rs
crates/chronos-ebpf/: Cargo.toml  build.rs
crates/chronos-ebpf/ebpf/: uprobe.bpf.c
crates/chronos-ebpf/src/: ebpf_impl.rs  lib.rs  ring_buffer.rs  types.rs  uprobe.rs
crates/chronos-ebpf/tests/: ebpf_integration.rs
crates/chronos-go/: Cargo.toml
crates/chronos-go/src/: adapter.rs  error.rs  event_loop.rs  event_parser.rs  lib.rs  rpc.rs  semantic_resolver.rs  subprocess.rs
crates/chronos-go/tests/: integration.rs  semantic_resolver_test.rs
crates/chronos-java/: Cargo.toml
crates/chronos-java/src/: adapter.rs  error.rs  event_loop.rs  event_parser.rs  lib.rs  protocol.rs  semantic_resolver.rs  subprocess.rs
crates/chronos-java/tests/: integration.rs  semantic_resolver_test.rs
crates/chronos-mcp/: Cargo.toml
crates/chronos-mcp/examples/: compare_traces.rs  custom_adapter.rs  debug_python.rs
crates/chronos-mcp/src/: lib.rs  security.rs  server.rs
crates/chronos-native/: Cargo.toml
crates/chronos-native/src/: address_normalizer.rs  breakpoint.rs  capture_runner.rs  lib.rs  native_adapter.rs  probe_backend.rs  ptrace_tracer.rs  symbol_resolver.rs  syscall_table.rs  watchpoint.rs
crates/chronos-native/src/dwarf/: eval.rs  location.rs  mod.rs  types.rs  variables.rs
crates/chronos-native/src/perf/: counters.rs  mod.rs
crates/chronos-native/tests/fixtures/: test_dwarf_vars  test_dwarf_vars.c
crates/chronos-python/: Cargo.toml
crates/chronos-python/src/: adapter.rs  bootstrap.rs  client.rs  convert.rs  error.rs  eval_backend.rs  lib.rs  parser.rs  semantic_resolver.rs  subprocess.rs
crates/chronos-python/tests/: e2e_python.rs  integration.rs  integration_test.rs  semantic_resolver_test.rs
crates/chronos-query/: Cargo.toml
crates/chronos-query/benches/: query_bench.rs
crates/chronos-query/src/: engine.rs  eval_dispatcher.rs  expr_eval.rs  lib.rs
crates/chronos-sandbox/: Cargo.toml
crates/chronos-sandbox/benches/: kpi_suite.rs  overhead.rs  query.rs  session_suite.rs  symbol_resolution_suite.rs
crates/chronos-sandbox/fixtures/go-hello/: go.mod  main.go
crates/chronos-sandbox/fixtures/java-hello/: pom.xml
crates/chronos-sandbox/fixtures/nodejs-hello/: index.js  package.json
crates/chronos-sandbox/fixtures/python-hello/: app.py  requirements.txt
crates/chronos-sandbox/fixtures/rust-hello/src/: main.rs
crates/chronos-sandbox/manifests/: go.yaml  java.yaml  nodejs.yaml  python.yaml  rust.yaml
crates/chronos-sandbox/quadlets/: go-target.container  java-target.container  nodejs-target.container  python-target.container  rust-target.container  sandbox.network
crates/chronos-sandbox/src/: error.rs  lib.rs  session.rs  workload.rs
crates/chronos-sandbox/src/container/: mod.rs  network.rs  pod.rs  quadlet.rs  runner.rs  volume.rs
crates/chronos-sandbox/src/kpi/: latency.rs  mod.rs  overhead.rs  throughput.rs
crates/chronos-sandbox/src/manifest/: loader.rs  mod.rs  runner.rs  scoring.rs
crates/chronos-sandbox/src/targets/: c.rs  go.rs  java.rs  mod.rs  nodejs.rs  python.rs  rust.rs
crates/chronos-sandbox/tests/: test_go.rs  test_java.rs  test_kpi.rs  test_nodejs.rs  test_python.rs  test_quadlet.rs  test_rust.rs  test_sandbox_integration.rs
crates/chronos-store/: Cargo.toml
crates/chronos-store/benches/: cas_bench.rs
crates/chronos-store/src/: cas.rs  diff.rs  error.rs  lib.rs  storage.rs
k8s/: deployment.yaml  service.yaml
(+80 files in other folders)
