[workspace]
resolver = "2"
members = [
    "crates/chronos-domain",
    "crates/chronos-format",
    "crates/chronos-capture",
    "crates/chronos-native",
    "crates/chronos-index",
    "crates/chronos-query",
    "crates/chronos-mcp",
    "crates/chronos-e2e",
    "crates/chronos-ebpf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
chronos-domain = { path = "crates/chronos-domain" }
chronos-format = { path = "crates/chronos-format" }
chronos-capture = { path = "crates/chronos-capture" }
chronos-native = { path = "crates/chronos-native" }
chronos-index = { path = "crates/chronos-index" }
chronos-query = { path = "crates/chronos-query" }
chronos-mcp = { path = "crates/chronos-mcp" }
chronos-e2e = { path = "crates/chronos-e2e" }
chronos-ebpf = { path = "crates/chronos-ebpf" }

# External
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
flatbuffers = "24"
nix = { version = "0.29", features = ["ptrace", "signal", "process"] }
gimli = "0.31"
object = "0.36"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
debug = true
