[package]
name = "chronos-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rmcp = { version = "1.5", features = ["server", "macros", "schemars", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chronos-mcp = { path = "../crates/chronos-mcp" }
