[package]
name = "chronos-browser"
version.workspace = true
edition.workspace = true

[dependencies]
chronos-domain = { workspace = true }
chronos-capture = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "process", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
which = "7"
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
