[package]
name = "chronos-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "eBPF-based tracing adapter for Chronos (uprobes + ring buffer)"

[features]
default = []
ebpf = ["dep:aya", "dep:aya-log"]

[dependencies]
chronos-domain = { workspace = true }
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
object.workspace = true

# Optional eBPF dependencies (only when `ebpf` feature is enabled)
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = "1"
