[package]
name = "chronos-mcp"
version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chronos-domain = { workspace = true }
chronos-capture = { workspace = true }
chronos-native = { workspace = true }
chronos-index = { workspace = true }
chronos-query = { workspace = true }
chronos-python = { workspace = true }
chronos-js = { workspace = true }
chronos-store = { workspace = true }
chronos-ebpf = { workspace = true }
chronos-browser = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rmcp = { version = "1.5", features = ["server", "macros", "schemars", "transport-io"] }
uuid = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }

[[bin]]
name = "chronos-mcp"
path = "src/bin/chronos-mcp.rs"
