[package]
name = "chronos-query"
version.workspace = true
edition.workspace = true

[dependencies]
chronos-domain = { workspace = true }
chronos-index = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_bench"
harness = false
