[package]
name = "chronos-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Internal workspace deps
chronos-domain = { workspace = true }
chronos-capture = { workspace = true }
chronos-query = { workspace = true }
chronos-native = { workspace = true }
chronos-python = { workspace = true }

# External
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
uuid = { workspace = true }

# Container runtimes
# Note: Using podman CLI directly via std::process::Command
# testcontainers = "12" # Not used - podman CLI instead

# Benchmarking
criterion = "0.5"
divan = { version = "0.1", optional = true }

[dev-dependencies]
# Benchmarking dev
criterion = "0.5"

[features]
default = []
nightly = ["divan"]
java = []
go = []
python = []
nodejs = []
cpp = []
integration = []

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "kpi_suite"
harness = false

[[bench]]
name = "symbol_resolution_suite"
harness = false

[[bench]]
name = "session_suite"
harness = false
