[package]
name = "chronos-store"
version.workspace = true
edition.workspace = true

[dependencies]
chronos-domain = { path = "../chronos-domain" }
redb = "2"
blake3 = "1"
lz4_flex = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cas_bench"
harness = false
